iniciando el primer commit

--- a/src/views/productos/index.html
+++ b/src/views/productos/index.html
@@ -7,8 +7,8 @@
 {% block contenido %}
     <h1>Listado de productos</h1>
     <a href="{{ url_for('crear_producto') }}">Crear</a>
-    <table class="table table-bordered">
-        <thead>
+    <table class="table table-bordered ">
+        <thead class="table-primary">
             <tr>
                 <th>ID</th>
                 <th>Nombre</th>
