--- a/src/views/index.html
+++ b/src/views/index.html
@@ -10,7 +10,7 @@
     <h1>*****Bienvenido******</h1>
     <h1>*********************</h1>
     <h3>
-    <a href="{{ url_for('productos', id='null') }}" class="text-warning">Listado de Productos</a>
+    <a href="{{ url_for('productos') }}" class="text-warning">Listado de Productos</a>
     </h3>
 
 </center>
